--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -36,6 +36,7 @@ jobs:
               curl -s https://gist.githubusercontent.com/ziodave/20ab49f5ea2e6e500255c7e5ff1fd5e2/raw/e820c925f07ec26bdb6e87353d142a1d3445d7d3/1.patch | git apply -
 
               echo "*** Preparing tags ***"
+              cut
               version=$(echo $tag | cut -d '-' -f1)
               os=$(echo $tag | cut -d '-' -f2)
               osrel=$(echo $tag | cut -d '-' -f3)
