--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -45,20 +45,26 @@ jobs:
               osrel=$(echo $tag | cut -d '-' -f3)
               echo "*** OS Rel: $osrel ***"
               # Ex: 6
-              tag0="${{ github.repository }}:$major"
+              tag0="wordlift/wordpress-nginx:$major"
               echo "*** Tag 0: $tag0 ***"
               # Ex: 6-debian-11
-              tag1="${{ github.repository }}:$major-$os-$osrel"
+              tag1="wordlift/wordpress-nginx:$major-$os-$osrel"
               echo "*** Tag 1: $tag1 ***"
               # Ex: 6.0.0
-              tag2="${{ github.repository }}:$version"
+              tag2="wordlift/wordpress-nginx:$version"
               echo "*** Tag 2: $tag2 ***"
               # Ex: 6.0.0-debian-11-r0
-              tag3="${{ github.repository }}:$tag"
+              tag3="wordlift/wordpress-nginx:$tag"
               echo "*** Tag 3: $tag3 ***"
               
               ## Tag the images
               echo "*** Building image in $major/$os-$osrel with tags $tag0, $tag1, $tag2 and $tag3 ***"
-              docker build "$major/$os-$osrel" -t $tag0 -t $tag1 -t $tag2 -t $tag3
+              docker build "$major/$os-$osrel" \
+                -t ghcr.io/$tag0 -t ghcr.io/$tag1 -t ghcr.io/$tag2 -t ghcr.io/$tag3 \
+                -t $tag0 -t $tag1 -t $tag2 -t $tag3
+              docker push ghcr.io/$tag0
+              docker push ghcr.io/$tag1
+              docker push ghcr.io/$tag2
+              docker push ghcr.io/$tag3
           done
 
