add docker support

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -25,7 +25,7 @@ jobs:
 
           # Build the images
           echo ${{ secrets.GITHUB_TOKEN }} | docker login --username ${{ github.repository_owner }} --password-stdin ghcr.io
-          # echo ${{ secrets.DOCKER_TOCKEN }} | docker login --username ${{ secrets.DOCKER_USERNAME }}
+          echo ${{ secrets.DOCKER_TOKEN }} | docker login --username ${{ secrets.DOCKER_USER }}
 
           tags=$(git describe --tags $(git rev-list --tags --after=$(date -d '-1 day' '+%s')))
           for tag in $tags; do
@@ -67,9 +67,8 @@ jobs:
               docker push ghcr.io/$tag1
               docker push ghcr.io/$tag2
               docker push ghcr.io/$tag3
-              # docker push $tag0
-              # docker push $tag1
-              # docker push $tag2
-              # docker push $tag3
+              docker push $tag0
+              docker push $tag1
+              docker push $tag2
+              docker push $tag3
           done
-
