--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -37,8 +37,8 @@ jobs:
 
           logs=$(git log --since="$since" --pretty=tformat:"%C(auto)%h %s" --grep="\[bitnami/wordpress-nginx\] [R|r]elease" --author bitnami-bot@vmware.com --author containers@bitnami.com --author containers-bot@bitnami.com || true)
           for log in $logs; do
-              commit=$(echo $log | cut -f1 -d' ')
-              tag=$(echo $log | cut -f4 -d' ')
+              commit=$(echo $logs | cut -f1 -d' ')
+              tag=$(echo $logs | cut -f4 -d' ')
               
               echo "*** Checking out commit $commit ***"
               git checkout $commit
