use patch instead of git patch to apply patches indipendently from commit

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -82,4 +82,6 @@ jobs:
               docker push $tag1
               docker push $tag2
               docker push $tag3
+
+              git reset --hard
           done <<< $logs
