--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Merge upstream
         run: |
 
-          export since="2 months ago"
+          export since="1 week ago"
 
           # Checkout the repository
           echo "*** Configuring the local git ***"
@@ -51,7 +51,7 @@ jobs:
 
               # Apply the patch
               echo "*** Applying patch ***"
-              curl -s https://gist.githubusercontent.com/ziodave/20ab49f5ea2e6e500255c7e5ff1fd5e2/raw/306748d587772a00f32b7288b3d081890b5e7232/1.patch | patch -p1
+              curl -s https://gist.githubusercontent.com/ziodave/20ab49f5ea2e6e500255c7e5ff1fd5e2/raw/5417b50fe5b4667920297298c1887e4b37faa747/1.patch | patch -p1
 
               echo "*** Preparing tags ***"
               version=$(echo $tag | cut -d '-' -f1)
